2007-07-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py (Application.OnInit): Catch startup
	form invocation errors.

2007-07-03  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py (ListForm): Show field descriptions as column
	label tooltips.

2007-06-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Reset startup forms if the user
	doesn't save the current state.

	* pytis/presentation/field.py (PresentedRow.permitted)
	(PresentedRow.codebook, PresentedRow.key): New methods.
	(PresentedRow._set_row): Always use `FieldSpec' data type.
	(PresentedRow): Don't care about field types within the `changed()'
	and `field_changed()' methods.

	* pytis/form/inputfield.py: Avoid using `PresentedRow.data()' method.
	Don't validate when the transaction is already closed. 

	* pytis/form/dualform.py: Avoid using `PresentedRow.data()' method.

	* pytis/form/form.py: Added a hack to pass an independent, but
	initialized data object to application defined procedures.

2007-06-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/commands_.py: New command `ListForm.COMMAND_COPY_AGGREGATION_RESULT'.

	* pytis/form/screen.py: Clipboard copying fixed.

	* pytis/form/list.py: Turn on aggregation functions defined in
	specification.  Handle aggregation result copying and add the
	command to the context menu.  

	* pytis/presentation/spec.py: Added support for turning on
	aggregation functions in specification.

	* pytis/presentation/field.py: Handle closed transactions in
	codebook display computation.

2007-06-28  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (PostgreSQLConnector._pg_query): Raise
	DBUserException when trying to use closed transaction.

2007-06-28  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (DBPostgreSQLTransaction.open): New
	method.

2007-06-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py: Define the callback `CALL_USER_INTERACTION'